# zus-symulator-emerytalny

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml.example
app/: app.py  auth.py  pyproject.toml  requirements.txt
app/data/dane_emerytalne/: analiza_smiertelnosci.csv  analiza_wrazliwosci_wplywy_proc.csv  analiza_wrazliwosci_wydatki_proc.csv  liczba_ubezpieczonych_tys.csv  parametry_makroekonomiczne_wariant_1.csv  parametry_makroekonomiczne_wariant_2.csv  prognoza_demograficzna_MF_2019.csv  saldo_roczne_mln_zl.csv  saldo_zdyskontowane_2021_mln_zl.csv  wplywy_proc_PKB.csv  wplywy_proc_podstaw_skladek.csv  wplywy_skladkowe_mln_zl.csv  wspolczynnik_obciazenia.csv  wydatki_funduszu_mln_zl.csv  wydatki_proc_PKB.csv
app/data/functionalities/: inflation_projection.py  life_expectancy_calculator.py  macro_scenarios.py  pension_calculator.py  pension_comparison.py  pension_delay.py  pension_scenarios.py  replacement_rate.py
app/data/scripts/: create_data_from_zus_data.py  run_tests.py
app/data/tests/: test_inflation_projection.py  test_life_expectancy_calculator.py  test_macro_scenarios.py  test_pension_calculator.py  test_pension_comparison.py  test_pension_delay.py  test_pension_profiles.py  test_replacement_rate.py  test_scenarios.py  test_sick_leave_adjustment.py  test_valorization_engine.py  test_wage_indexation.py
app/db/: __init__.py
app/db/model/: report.py
app/db/repositories/: report.py
app/schemas/: auth.py  report.py  simulations.py
data/: README.md  ideas.md  pyproject.toml  zus.html  zus2.html  (+3 more)
(+97 files in other folders)
